[project]
name = "concept_drift"
version = "0.1.0"
description = ""
authors = [
    {name = "Katerina Oikonomou",email = "k.m.oikonomou@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "umap-learn (>=0.5.11,<0.6.0)",
    "pillow (>=12.1.1,<13.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

